--- a/standardhours.htm
+++ b/standardhours.htm
@@ -6,13 +6,12 @@
 <script type=text/javascript>
 
 
-//23Q4
-var target_machining = 6800;
-var target_welding = 1133;
-var target_globes = 1926;
-var target_levels = 1530;
-var target_standard = 2460+657;
-var target_painting = 2494;
+var target_machining = 6200;
+var target_welding = 1200;
+var target_globes = 1900;
+var target_levels = 1600;
+var target_standard = 2750;
+var target_painting = 2400;
 var target_gscm = target_machining +target_welding+target_painting+target_standard+target_globes+target_levels;
 
 function refreshall(){
